enabled reverse column flex direction of the tweet container so 'newer' items shows up at the top. also fixed some spacing issue between the tweet articles

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -38,3 +38,8 @@ div {
   justify-content: center;
   align-items: center;
 }
+
+#tweets-container {
+  display: flex;
+  flex-direction: column-reverse;
+}
